force-app/main/default/objects/Lead/fields/Conversation_Abandoned_At__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Abandoned_At__c</fullName>
    <description>Timestamp when the customer dropped off mid-booking conversation without completing the OTP verification or booking confirmation. Used by the Abandoned Conversation Recovery scheduled Flow to send a WhatsApp re-engagement nudge after 1 hour.</description>
    <label>Conversation Abandoned At</label>
    <type>DateTime</type>
</CustomField>