force-app/main/default/objects/Lead/fields/Customer_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Zip_Code__c</fullName>
    <label>Customer ZIP Code</label>
    <description>ZIP code captured during the Agentforce WhatsApp conversation. Used to route the lead to the nearest dealership.</description>
    <type>Text</type>
    <length>10</length>
</CustomField>