force-app/main/default/objects/Lead/fields/Incentive_Offered__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Offered__c</fullName>
    <label>Incentive Offered</label>
    <description>Set to true when the AI Incentive Engine detects hesitation signals in the conversation and offers the customer a time-limited incentive (e.g., complimentary accessories kit). Used to track incentive utilisation and measure ROI of the incentive program.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>