force-app/main/default/objects/Lead/fields/Incentive_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Redeemed__c</fullName>
    <label>Incentive Redeemed</label>
    <description>Set to true by the dealership when the customer physically arrives and redeems the incentive (e.g., accessories kit). Together with Incentive_Offered__c, enables the marketing team to measure incentive redemption rates and conversion lift.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>