force-app/main/default/objects/Lead/fields/OTP_Code__c.field-meta.xml
<CustomField>
    <fullName>OTP_Code__c</fullName>
    <label>OTP Code</label>
    <description>Stores the current one-time password generated for this lead. Cleared (set to null) immediately after successful verification. Never exposed in agent conversation logs.</description>
    <type>Text</type>
    <length>6</length>
</CustomField>