force-app/main/default/objects/Lead/fields/OTP_Expiry__c.field-meta.xml
<CustomField>
    <fullName>OTP_Expiry__c</fullName>
    <label>OTP Expiry</label>
    <description>DateTime after which the current OTP is considered expired. Set to NOW() + 5 minutes when the OTP is generated. The ValidateOTP Flow rejects any OTP where the current time exceeds this value.</description>
    <type>DateTime</type>
</CustomField>