force-app/main/default/objects/Lead/fields/OTP_Verified__c.field-meta.xml
<CustomField>
    <fullName>OTP_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true once the customer successfully enters the correct OTP. Acts as a security gate — the CreateTestDriveBooking, CancelTestDrive, and RescheduleTestDrive Flows check this field before making any record changes.</description>
    <label>OTP Verified</label>
    <type>Checkbox</type>
</CustomField>