force-app/main/default/objects/Lead/fields/WhatsApp_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the customer has consented to receive WhatsApp messages from Electra Cars. Required for TCPA and GDPR compliance. Set to true during the Agentforce booking conversation after explicit disclosure.</description>
    <label>WhatsApp Opt-In</label>
    <type>Checkbox</type>
</CustomField>